--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "redux-thunk": "^2.4.2",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
