--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,18 @@
 {
+  "name": "appblog",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "set NODE_ENV=development&& nodemon index.js",
+    "prod": "set NODE_ENV=production&& set PORT=8080 && nodemon app.js",
+    "start": "node app.js "
+  },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "config": "^3.3.9",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.5.1",
