--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "config": "^3.3.9",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mysql": "^2.18.1",
     "mysql2": "^3.5.1",
     "nodemailer": "^6.9.4",
