--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.5.1",
     "nodemailer": "^6.9.4",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "slugify": "^1.6.6"
   }
 }
