--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "lodash": "^4.17.21",
     "mysql": "^2.18.1",
     "mysql2": "^3.5.1",
     "nodemailer": "^6.9.4",
